test/cases/pos/0110a_function_hoisting.ul
int x = sum(2, 3);

fn sum int a, int b => return a + b;
