test/cases/neg/0221_undeclared_func.ul
int x = 3 + sum(5, 1);
